--- a/.golangci.yml
+++ b/.golangci.yml
@@ -10,11 +10,11 @@ output:
 linters:
   enable-all: true
   fast: false
-  
+
   disable:
     # These linters are all deprecated. We disable them explicitly to avoid the
     # linter logging deprecation warnings.
-    - execinquery
+    - tenv
 
     # These are linters we'd like to enable, but that will be labor intensive to
     # make existing code compliant.
@@ -23,7 +23,6 @@ linters:
     - testpackage
     - paralleltest
     - nilnil
-    - gomnd
 
     # Below are linters that lint for things we don't value. Each entry below
     # this line must have a comment explaining the rationale.
@@ -31,7 +30,7 @@ linters:
     # These linters add whitespace in an attempt to make code more readable.
     # This isn't a widely accepted Go best practice, and would be laborious to
     # apply to existing code.
-    - wsl 
+    - wsl
     - nlreturn
 
     # Warns about uses of fmt.Sprintf that are less performant than alternatives
@@ -83,7 +82,7 @@ linters:
     # Warns about returning interfaces rather than concrete types. We do think
     # it's best to avoid returning interfaces where possible. However, at the
     # time of writing enabling this linter would only catch the (many) cases
-    # where we must return an interface. 
+    # where we must return an interface.
     - ireturn
 
     # Warns about returning named variables. We do think it's best to avoid
@@ -93,10 +92,6 @@ linters:
     # we believe it makes sense to return (ready bool) rather than just (bool)
     # to communicate what the bool means.
     - nonamedreturns
-
-    # Warns about taking the address of a range variable. This isn't an issue in
-    # Go v1.22 and above: https://tip.golang.org/doc/go1.22
-    - exportloopref
 
     # Warns about using magic numbers. We do think it's best to avoid magic
     # numbers, but we should not be strict about it.
@@ -189,7 +184,7 @@ linters-settings:
   nolintlint:
     require-explanation: true
     require-specific: true
-  
+
   depguard:
     rules:
       no_third_party_test_libraries:
@@ -206,11 +201,16 @@ linters-settings:
 
   interfacebloat:
     max: 5
-  
+
   tagliatelle:
     case:
       rules:
         json: goCamel
+
+  recvcheck:
+    exclusions:
+    - "*.DeepCopy" # DeepCopy* methods are generated and always use a pointer receiver, which may conflict with other methods for a given type.
+    - "*.DeepCopyInto"
 
 issues:
   # Excluding generated files.
@@ -237,7 +237,7 @@ issues:
       text: "(unnamedResult|exitAfterDefer)"
       linters:
         - gocritic
-    
+
     # It's idiomatic to register Kubernetes types with a package scoped
     # SchemeBuilder using an init function.
     - path: apis/
@@ -282,7 +282,7 @@ issues:
       linters:
       - gosec
       - gas
-    
+
     # Some k8s dependencies do not have JSON tags on all fields in structs.
     - path: k8s.io/
       linters:
