build: only lint for WIRE_JSON level breaking protobuf changes
This updates our protobuf breaking changes detection to be aligned
(but a bit more strict to catch breaking changes to JSON encoding)
with what is done in core crossplane.

See https://github.com/crossplane/crossplane/commit/ed343d1ed2754d57e77d562f41d252bd49908134
for more details.

Signed-off-by: Jared Watts <jbw976@gmail.com>

--- a/apis/buf.yaml
+++ b/apis/buf.yaml
@@ -2,7 +2,7 @@ version: v1
 name: buf.build/crossplane/crossplane-runtime
 breaking:
   use:
-    - FILE
+    - WIRE_JSON
 lint:
   use:
     - DEFAULT
