--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,262 +1,16 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended",
-    "helpers:pinGitHubActionDigests",
-    ":semanticCommits"
-  ],
-  // We only want renovate to rebase PRs when they have conflicts, default
-  // "auto" mode is not required.
-  "rebaseWhen": "conflicted",
-  // The maximum number of PRs to be created in parallel
-  "prConcurrentLimit": 5,
-  // The branches renovate should target
-  // PLEASE UPDATE THIS WHEN RELEASING.
-  "baseBranches": [
-    'main',
-    'release-1.20',
-    'release-2.0',
-    'release-2.1',
-  ],
-  "ignorePaths": [
-    "design/**",
-    // We test upgrades, so leave it on an older version on purpose.
-    "test/e2e/manifests/pkg/provider/provider-initial.yaml",
-  ],
-  "postUpdateOptions": [
-    "gomodTidy"
-  ],
-  // All PRs should have a label
-  "labels": [
-    "automated"
-  ],
-  "customManagers": [
-    {
-      "customType": "regex",
-      "description": "Bump Earthly version in GitHub workflows",
-      "fileMatch": [
-        "^\\.github\\/workflows\\/[^/]+\\.ya?ml$"
-      ],
-      "matchStrings": [
-        "EARTHLY_VERSION: '(?<currentValue>.*?)'\\n"
-      ],
-      "datasourceTemplate": "github-releases",
-      "depNameTemplate": "earthly/earthly",
-      "extractVersionTemplate": "^v(?<version>.*)$"
-    },
-    {
-      "customType": "regex",
-      "description": "Bump Go version in Earthfile",
-      "fileMatch": [
-        "^Earthfile$"
-      ],
-      "matchStrings": [
-        "ARG --global GO_VERSION=(?<currentValue>.*?)\\n"
-      ],
-      "datasourceTemplate": "golang-version",
-      "depNameTemplate": "golang"
-    },
-    {
-      "customType": "regex",
-      "description": "Bump golangci-lint version in the Earthfile",
-      "fileMatch": [
-        "^Earthfile$"
-      ],
-      "matchStrings": [
-        "ARG GOLANGCI_LINT_VERSION=(?<currentValue>.*?)\\n"
-      ],
-      "datasourceTemplate": "github-releases",
-      "depNameTemplate": "golangci/golangci-lint"
-    },
-    {
-      "customType": "regex",
-      "description": "Bump codeql version in the Earthfile",
-      "fileMatch": [
-        "^Earthfile$"
-      ],
-      "matchStrings": [
-        "ARG CODEQL_VERSION=(?<currentValue>.*?)\\n"
-      ],
-      "datasourceTemplate": "github-releases",
-      "depNameTemplate": "github/codeql-action",
-      "extractVersionTemplate": "^codeql-bundle-(?<version>.*)$"
-    },
-  ],
-  // Renovate doesn't have native Earthfile support, but because Earthfile
-  // syntax is a superset of Dockerfile syntax this works to update FROM images.
-  // https://github.com/renovatebot/renovate/issues/15975
-  "dockerfile": {
-    "fileMatch": [
-      "(^|/)Earthfile$"
-    ]
-  },
-  // PackageRules disabled below should be enabled in case of vulnerabilities
-  "vulnerabilityAlerts": {
-    "enabled": true
-  },
-  "osvVulnerabilityAlerts": true,
-  // Renovate evaluates all packageRules in order, so low priority rules should
-  // be at the beginning, high priority at the end
-  "packageRules": [
-    {
-      "description": "Generate code after upgrading go dependencies (main)",
-      "matchDatasources": [
-        "go"
-      ],
-      // Currently we only have an Earthfile on main and some release branches, so we ignore the ones we know don't have it.
-      matchBaseBranches: [
-        '!/release-1\.16/',
-      ],
-      postUpgradeTasks: {
-        // Post-upgrade tasks that are executed before a commit is made by Renovate.
-        "commands": [
-          "earthly --strict +go-generate",
-        ],
-        fileFilters: [
-          "**/*"
-        ],
-        executionMode: "update",
-      },
-    },
-    {
-      "description": "Generate code after upgrading go dependencies (release branch)",
-      "matchDatasources": [
-        "go"
-      ],
-      // Currently we only have an Earthfile on main and some release branches, so we only run this on older release branches.
-      matchBaseBranches: [
-        'release-1.16',
-      ],
-      postUpgradeTasks: {
-        // Post-upgrade tasks that are executed before a commit is made by Renovate.
-        "commands": [
-          "make go.generate",
-        ],
-        fileFilters: [
-          "**/*"
-        ],
-        executionMode: "update",
-      },
-    },
-    {
-      "description": "Lint code after upgrading golangci-lint (main)",
-      "matchDepNames": [
-        "golangci/golangci-lint"
-      ],
-      // Currently we only have an Earthfile on main and some release branches, so we ignore the ones we know don't have it.
-      matchBaseBranches: [
-        '!/release-1\.16/',
-      ],
-      postUpgradeTasks: {
-        // Post-upgrade tasks that are executed before a commit is made by Renovate.
-        "commands": [
-          "earthly --strict +go-lint",
-        ],
-        fileFilters: [
-          "**/*"
-        ],
-        executionMode: "update",
-      },
-    },
-    {
-      "description": "Lint code after upgrading golangci-lint (release branch)",
-      "matchDepNames": [
-        "golangci/golangci-lint"
-      ],
-      // Currently we only have an Earthfile on main and some release branches, so we only run this on older release branches.
-      matchBaseBranches: [
-        'release-1.16',
-      ],
-      postUpgradeTasks: {
-        // Post-upgrade tasks that are executed before a commit is made by Renovate.
-        "commands": [
-          "make go.lint",
-        ],
-        fileFilters: [
-          "**/*"
-        ],
-        executionMode: "update",
-      },
-    },
-    {
-      "description": "Ignore non-security related updates to release branches",
-      matchBaseBranches: [
-        "/^release-.*/"
-      ],
-      enabled: false,
-    },
-    {
-      "description": "Still update Docker images on release branches though",
-      "matchDatasources": [
-        "docker"
-      ],
-      matchBaseBranches: [
-        "/^release-.*/"
-      ],
-      enabled: true,
-    },
-    {
-      "description": "Only get Docker image updates every 2 weeks to reduce noise",
-      "matchDatasources": [
-        "docker"
-      ],
-      "schedule": [
-        "every 2 week on monday"
-      ],
-      enabled: true,
-    },
-    {
-      "description": "Ignore k8s.io/client-go older versions, they switched to semantic version and old tags are still available in the repo",
-      "matchDatasources": [
-        "go"
-      ],
-      "matchDepNames": [
-        "k8s.io/client-go"
-      ],
-      "allowedVersions": "<1.0",
-    },
-    {
-      "description": "Ignore k8s dependencies, should be updated on crossplane-runtime",
-      "matchDatasources": [
-        "go"
-      ],
-      "matchPackagePrefixes": [
-        "k8s.io",
-        "sigs.k8s.io"
-      ],
-      "enabled": false,
-    },
-    {
-      "description": "Only get dependency digest updates every month to reduce noise, except crossplane-runtime",
-      "excludePackageNames": [
-        "github.com/crossplane/crossplane-runtime"
-      ],
-      "matchDatasources": [
-        "go"
-      ],
-      "matchUpdateTypes": [
-        "digest",
-      ],
-      "extends": [
-        "schedule:monthly"
-      ],
-    },
-    {
-      "description": "Ignore oss-fuzz, it's not using tags, we'll stick to master",
-      "matchDepTypes": [
-        "action"
-      ],
-      "matchDepNames": [
-        "google/oss-fuzz"
-      ],
-      "enabled": false
-    },
-    {
-      "description": "Group all go version updates",
-      "matchDatasources": [
-        "golang-version"
-      ],
-      "groupName": "golang version",
-    }
+  // This is the main Renovate configuration file.
+  // It extends base config and build-tool-specific configs.
+  //
+  // - renovate-base.json5: Common configuration for all branches
+  // - renovate-earthly.json5: Earthly-specific config for release branches
+  // - renovate-nix.json5: Nix-specific config for main branch
+  //
+  // The local> syntax requires owner/repo format with // for paths.
+  // See: https://docs.renovatebot.com/config-presets/#local-presets
+  extends: [
+    'local>crossplane/crossplane-runtime//.github/renovate-base.json5',
+    'local>crossplane/crossplane-runtime//.github/renovate-earthly.json5',
+    'local>crossplane/crossplane-runtime//.github/renovate-nix.json5',
   ],
 }
