Fix remaining lint issues from golangci-lint 2.6
golangci-lint 2.6 flags deprecation notices that aren't in their own
paragraph, and duplicate package documentation across files.

This commit fixes deprecated comment formatting by adding blank lines
before Deprecated: notices, and removes duplicate package docs from
event_test.go and namespaced_reference.go.

It also adds lint exclusions for:
- goconst in test files (repeated test reason strings are intentional)
- staticcheck SA1019 for resource.Legacy* types (the runtime must use
  these deprecated types to support legacy resources)

Signed-off-by: Nic Cope <nicc@rk0n.org>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -159,6 +159,7 @@ linters:
           - gochecknoglobals
           - gochecknoinits
           - gocognit
+          - goconst
           - gosec
           - scopelint
           - unparam
@@ -219,6 +220,13 @@ linters:
       - linters:
           - staticcheck
         text: 'SA1019: .+ is deprecated: Use Composition Functions instead.'
+
+      # The runtime library defines deprecated types like LegacyManaged and
+      # LegacyProviderConfigUsage. Code in the runtime must use these types to
+      # support legacy resources, even though they're deprecated.
+      - linters:
+          - staticcheck
+        text: 'SA1019: resource\.Legacy.+ is deprecated:'
 
       # Some shared structs in apis/common/v1 are moved to
       # apis/common. To preserve a backward-compatible directory structure
