Disable wsl v5 (whitespace linter)
This just adds a bunch of whitespace, mostly before returns. We have it
disabled in c/c - it's not something we value.

Signed-off-by: Nic Cope <nicc@rk0n.org>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -24,6 +24,7 @@ linters:
     # This isn't a widely accepted Go best practice, and would be laborious to
     # apply to existing code.
     - wsl
+    - wsl_v5
     - nlreturn
 
     # Warns about uses of fmt.Sprintf that are less performant than alternatives
