Upgrade controller-runtime to v0.21.0
This upgrade required several changes to address breaking changes and
new linter requirements:

- Update go.mod dependencies for controller-runtime v0.21.0
- Fix gocritic deprecatedComment lint issues by adding blank lines
  before Deprecated: comments
- Fix godoclint duplicate package doc comments
- Fix staticcheck warnings for deprecated webhook interfaces by adding
  assertions for new admission.Defaulter and admission.Validator interfaces
- Add revive linter exclusion for the errors package (intentionally
  shadows stdlib)
- Apply golangci-lint auto-fixes (slices.Contains, maps.Copy, etc.)
- Fix flaky test by sorting GVKs by full key (Group, Version, Kind)

Created with Cursor using Claude 4.5 Opus

Signed-off-by: Adam Kasztenny <adam.kasztenny@elastic.co>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -235,6 +235,13 @@ linters:
           - revive
         text: "var-naming: avoid meaningless package names"
         path: apis/common
+
+      # The errors package intentionally shadows the stdlib errors package
+      # to provide a drop-in compatible API with additional functionality.
+      - linters:
+          - revive
+        text: "var-naming: avoid package names that conflict with Go standard library package names"
+        path: pkg/errors/
     paths:
       - zz_generated\..+\.go$
       - .+\.pb.go$
