renovate: Use nix for v2.2 and newer release branches
Previously we configured renovate to use nix only for the main branch, since all
existing release branches still used earthly. With the release-2.2 branch being
cut after the switch to nix, we need to update the rule so that nix gets used
for release-2.2, while earthly is still used for all older release branches.

Signed-off-by: Adam Wolfe Gordon <awg@upbound.io>

--- a/.github/renovate-earthly.json5
+++ b/.github/renovate-earthly.json5
@@ -68,7 +68,9 @@
         'go',
       ],
       matchBaseBranches: [
-        '/^release-.*/',
+        // Release 2.1 and older use earthly.
+        '/^release-1\..*/',
+        '/^release-2\.[0-1]$/',
       ],
       postUpgradeTasks: {
         commands: [
@@ -86,7 +88,9 @@
         'golangci/golangci-lint',
       ],
       matchBaseBranches: [
-        '/^release-.*/',
+        // Release 2.1 and older use earthly.
+        '/^release-1\..*/',
+        '/^release-2\.[0-1]$/',
       ],
       postUpgradeTasks: {
         commands: [
