--- a/.github/renovate-nix.json5
+++ b/.github/renovate-nix.json5
@@ -24,6 +24,8 @@
       ],
       matchBaseBranches: [
         'main',
+        // Release 2.2 and newer use nix.
+        '/'^release-2\.([2-9]|..+)$/',
       ],
       postUpgradeTasks: {
         commands: [
@@ -43,6 +45,8 @@
       ],
       matchBaseBranches: [
         'main',
+        // Release 2.2 and newer use nix.
+        '/'^release-2\.([2-9]|..+)$/',
       ],
       postUpgradeTasks: {
         commands: [
